<resources>
    <string name="app_name">Showcase</string>
    <string name="profile">Profile</string>
    <string name="skill">Skill</string>
    <string name="portfolio">Portfolio</string>
    <string name="award">Award</string>
    <string name="education">Education</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_an_account">Don\'t have an account? <font color='#FF6200EE'>Register</font></string>
    <string name="already_have_account">Already have account? <font color='#FF6200EE'>Login</font></string>
    <string name="remember_password_login">Remember the password? <font color='#FF6200EE'>Login</font></string>
    <string name="email_address">Email Address</string>
    <string name="hint_input_your_email_address"><font size="14">Input your email address</font></string>
    <string name="password">Password</string>
    <string name="hint_your_secret_password"><font size="14">Your secret password</font></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="by_using_our_service_you_accept_our">By using our service, you accept our</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hint_confirm_your_password"><font size="14">Confirm your password</font></string>
    <string name="name">Name</string>
    <string name="hint_input_your_name"><font size="14">Input your name</font></string>
    <string name="register">Register</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="join_with_thousands_creator">Join with thousands creator</string>
    <string name="we_will_send_you_a_reset_link">We will send you a reset link</string>
    <string name="reset_link_instruction">We will sent you a link to reset your password, please check your email address after this.</string>
    <string name="add_item">Add item</string>
    <string name="degree">Degree</string>
    <string name="hint_select_your_degree">Select your degree</string>

    <string-array name="degree_list">
        <item>Elementary School</item>
        <item>Junior School</item>
        <item>High School</item>
        <item>Collage</item>
        <item>Master</item>
        <item>Doctor</item>
        <item>Professor</item>
    </string-array>

</resources>