<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/defaultSpaceLarge"
    tools:context=".ui.educations.EducationCreateFragment">

    <TextView
        android:id="@+id/textViewDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/degree"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/editTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_select_your_degree"
        android:entries="@array/degree_list"
        android:paddingHorizontal="12dp"
        android:textColorHint="@color/mediumGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewDegree"
        app:layout_constraintTop_toBottomOf="@+id/textViewDegree" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>